--- a/src/App.scss
+++ b/src/App.scss
@@ -1,45 +1,9 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-.flex-center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+:root {
+  --white: rgb(255, 255, 255);
+  --yelow: rgb(251, 215, 15);
+  --orange: rgb(248, 115, 59);
+  --dark-color: rgba(16, 26, 16);
+  --purple: rgb(99, 7, 224);
+  --pink: rgb(228, 13, 218);
+  --dark-blue: rgb(12, 7, 86);
 }
