--- a/src/App.scss
+++ b/src/App.scss
@@ -10,10 +10,13 @@
 
 .select-background {
   background: radial-gradient(51.51% 51.84% at 50% 50%, rgba(130, 0, 124, 0.6) 0%, rgba(0, 0, 0, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, #00030F;
+  //background: radial-gradient(53.56% 97.02% at 49.06% 46.44%, rgba(130, 0, 69, 0.7) 0%, rgba(0, 0, 0, 0) 70%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, #00030F;
 }
 
 .pop-shadow {
-  box-shadow: 0px 6px 30px 30px rgba(38, 0, 56, 0.2);
+  //box-shadow: 0px 6px 30px 30px rgba(38, 0, 56, 0.2);
+  //box-shadow: 0px 1px 200px 100px rgba(38, 0, 56, 0.5);
+  box-shadow: 0px 1px 200px 100px rgb(54 0 80 / 50%);
 }
 
 .list-item__gradient {
