--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,8 @@
 }
 
 .select-background {
-  background: radial-gradient(51.51% 51.84% at 50% 50%, rgba(130, 0, 124, 0.6) 0%, rgba(0, 0, 0, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, #00030F;
+  background: radial-gradient(51.51% 51.84% at 50% 50%, rgba(130, 0, 124, 0.6) 0%, rgba(0, 0, 0, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */
+  , #00030F;
   //background: radial-gradient(53.56% 97.02% at 49.06% 46.44%, rgba(130, 0, 69, 0.7) 0%, rgba(0, 0, 0, 0) 70%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, #00030F;
 }
 
